--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="http://beerstrot.it/"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.github.io"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -27,15 +27,15 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
                 <li class="divider"></li>
-                <li><a href="eventi.html">Eventi</a></li>
+                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="chi-siamo.html">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
                 <li class="divider"></li>
-                <li><a href="contatti.html">Contatti</a></li>
+                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/blog">Blog</a></li>
+                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -226,7 +226,21 @@
 <!-- inizio footer -->
     <footer class="panel panel-prefooter extra-space-footer">
         <div class="row">
-            <!-- <div class="large-4 medium-4 columns">
+            <div class="large-6 medium-6 columns">
+                <h4 class="subheader">Fai parte della community</h4>
+                <ul class="inline-list">
+                    <li>
+                        <a class="fi-social-facebook icon-font-style" href="https://www.facebook.com/cavecchiabeerstrot" target="_blank"></a>
+                    <li>
+                        <a class="fi-social-twitter icon-font-style" href="https://twitter.com/intent/follow?screen_name=beerstrot"></a>
+                    </li>
+                    <li>
+                        <a class="fi-social-google-plus icon-font-style" href="https://plus.google.com/102722719947371580904/about" target="_blank"></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="large-6 medium-6 columns">
+                <h4 class="subheader">Iscriviti alla newsletter</h4>
                 <form action="input"> 
                     <div class="row collapse">
                         <div class="small-8 columns">
@@ -237,25 +251,6 @@
                         </div>
                     </div>
                 </form>
-            </div> -->
-            <div class="large-6 medium-6 small-8 small-centered large-centered columns extra-space">
-                <ul class="small-block-grid-3">
-                    <li>
-                        <span>
-                        <a class="fi-social-facebook icon-font-style" href="https://www.facebook.com/cavecchiabeerstrot" target="_blank"></a>
-                        </span>
-                    </li>
-                    <li>
-                        <span>
-                        <a class="fi-social-twitter icon-font-style" href="https://twitter.com/intent/follow?screen_name=beerstrot"></a>
-                        </span>
-                    </li>
-                    <li>
-                        <span>
-                        <a class="fi-social-google-plus icon-font-style" href="https://plus.google.com/102722719947371580904/about" target="_blank"></a>
-                        </span>
-                    </li>
-                </ul>
             </div>
         </div>
     </footer>
@@ -287,11 +282,28 @@
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
                 <meta itemprop="openingHours" content="Sa 18:00-01:00">
                 <meta itemprop="openingHours" content="Su 12:00-22:00">
-                <p> 
-                Mar&#8202;&ndash;&#8202;Ven: 12:00&ensp;&ndash;&ensp;14:00<br>
-                Mar&#8202;&ndash;&#8202;Ven: 18:00&ensp;&ndash;&ensp;00:00<br>
-                Sab: 18:00&ensp;&ndash;&ensp;01:00 <br>
-                Dom: 12:00&ensp;&ndash;&ensp;22:00 <br></p>
+                <div class="row">
+                    <div class="large-5 medium-5 small-5 columns">
+                        <p>Mar&#8202;&ndash;&#8202;Ven:</p>
+                    </div>
+                    <div class="large-7 medium-7 small-7 columns">
+                        <p>12:00&ensp;&ndash;&ensp;14:00 
+                            <br>18:00&ensp;&ndash;&ensp;00:00
+                        </p>
+                    </div>
+                    <div class="large-5 medium-5 small-5 columns">
+                        <p>Sab:</p>
+                    </div>
+                    <div class="large-7 medium-7 small-7 columns">
+                        <p>18:00&ensp;&ndash;&ensp;01:00</p>
+                    </div>
+                    <div class="large-5 medium-5 small-5 columns">
+                        <p>Dom:</p>
+                    </div>
+                    <div class="large-7 medium-7 small-7 columns">
+                        <p>12:00&ensp;&ndash;&ensp;22:00</p>
+                    </div>
+                </div>
                 <p><em>Chiuso il Lunedì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
@@ -315,12 +327,12 @@
     <div class="row">
         <div class="small-12 medium-12 large-12 columns">
             <ul class="inline-list navbar-footer-font">
-                <li><a href="http://beerstrot.it/">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="eventi.html">Eventi</a></li>
-                <li><a href="chi-siamo.html">Chi Siamo</a></li>
-                <li><a href="contatti.html">Contatti</a></li>
-                <li><a href="http://beerstrot.it/blog">Blog</a></li>
+                <li><a href="http://beerstrot.github.io">Home</a></li>
+                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
+                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
+                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
+                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
             </ul>
         </div>
     </div>
