--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </a>
                 </p>
             </div>
-            <div class="small-6 medium-3 large-3 columns">
+            <div class="small-6 medium-3 large-3 large-collapse columns">
                 <h4 class="subheader">Orari apertura</h4>
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
@@ -284,7 +284,7 @@
                 <meta itemprop="openingHours" content="Su 12:00-22:00">
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Mar&#8202;&ndash;&#8202;Ven:</p>
+                        <p>Mar-Ven</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>12&ensp;&ndash;&ensp;14
@@ -292,13 +292,13 @@
                         </p>
                     </div>
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Sab:</p>
+                        <p>Sabato</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>18&ensp;&ndash;&ensp;01</p>
                     </div>
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Dom:</p>
+                        <p>Domenica</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>12&ensp;&ndash;&ensp;22</p>
