--- a/index.html
+++ b/index.html
@@ -135,91 +135,13 @@
                     <p>Vuoi la nostra birra nel tuo pub? Sei un blogger o un giornalista? Cerchi lavoro? Compila i form e ricevi tutte le informazioni necessarie.</p>
                     <a role="button" href="contatti.html" class="">Contattaci &rarr;</a>
                 </div>
-                <div class="medium-4 large-4 columns">
+                <div class="medium-4 large-4 columns end">
                     <h1 class="extra-space">Blog</h1>
                     <img class="extra-space-image-event-blog" src=" http://placehold.it/1920x1080" alt="">
                     <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
                     <p>I piatti del giorno: li creiamo al momento a seconda delle primizie che troviamo alla mattina&hellip;</p>
                     <a role="button" href="blog.html" class="">Vai alle Notizie e alle Novità &rarr;</a>
                 </div>
-                <aside class="medium-4 large-4 columns" itemscope itemtype="http://schema.org/Restaurant">
-                <section>
-                    <div Class="callout panel extra-space-side-home">
-                        <h3>Dove siamo</h3>
-                        <p>
-                            <a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                <span itemprop="streetAddress">Via Centofinestre, 20</span>
-                                <br>
-                                <span itemprop="postalCode">60024</span>
-                                <span itemprop="addressLocality">Filottrano</span>
-                                <span itemprop="addressRegion">AN</span>
-                                <br>
-                                <span class="hide-for-small" itemprop="addressCountry">Italia</span>
-                            </a>
-                        </p>
-                        
-                        <h3 class="">Orari aperura</h3>
-                        <h6>
-                            <meta itemprop="openingHours" content="Su,Mo,Tu,We,Th 17:00-24:00"><span> Dom&#8202;&ndash;&#8202;Gio: 17:00&#8202;&ndash;&#8202;24:00</span>
-                        </h6>
-                         <h6>
-                            <meta itemprop="openingHours" content="Fr,Sa, 17:00-01:00"><span> Ven&#8202;&ndash;&#8202;Sab: 17:00&#8202;&ndash;&#8202;01:00</span>
-                        </h6>
-                        <h6><em>Chiusi solo il 1 Gennaio</em></h6>
-                        <a role="button" href="#" class="button extra-space-button" data-reveal-id="prenota-online">Prenota un tavolo</a>
-                        <div id="prenota-online" class="reveal-modal" data-reveal>
-                            <a class="close-reveal-modal"> &#215; </a> 
-                            <form action="input">
-                                <div class ="row">
-                                    <div class="small-5 medium-2 large-2 columns">  
-                                        <label>Persone
-                                            <select>
-                                              <option value="1">1</option>
-                                              <option value="2">2</option>
-                                              <option value="3">3</option>
-                                              <option value="4">4</option>
-                                              <option value="5">5</option>
-                                              <option value="6">6</option>
-                                              <option value="7">7</option>
-                                              <option value="8">8</option>
-                                            </select>
-                                          </label>
-                                    </div>
-                                </div>
-                                <div class ="row">
-                                    <div class="small-7 medium-4 large-3 columns">  
-                                        <label>Data
-                                            <input type="date" placeholder="" />
-                                          </label>
-                                    </div>
-                                    <div class="small-5 medium-3 large-2 columns end">  
-                                        <label>Ora
-                                            <input type="time" placeholder="" />
-                                          </label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="small-12 medium-5 large-6 columns">  
-                                        <label>Nome e Cognome
-                                            <input type="text" placeholder="Nome Cognome" />
-                                        </label>
-                                    </div>
-                                    <div class="small-12  medium-7 large-6 columns end">  
-                                        <label>Email
-                                            <input type="email" placeholder="email" />
-                                          </label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="small-12 medium-12 large-12 columns">
-                                        <a role="button" href="#" class="button extra-space-button">Prenota e ricevi conferma</a>
-                                    </div> 
-                                </div>
-                            </form>  
-                        </div>
-                    </div>
-                </section>
-                </aside>
             </div>
         </div>
     </div>
