fix social margin

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
     </div>
 <!-- inizio footer -->
-    <footer class="panel panel-prefooter extra-space-footer">
+    <footer class="panel-prefooter extra-space-footer">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
