--- a/eventi/index.html
+++ b/eventi/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <!--[if IE 9]><html class="lt-ie10" lang="it" > <![endif]-->
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-    <title>Beerstrot | Novità, Eventi, Racconti e Storie</title>
-    <meta name="description" content="Amiamo la Birra e diffondere l'amore per questo prezioso liquido. Facciamo la Birra, ci cuciniamo e ci divertiamo a raccontare come." />
+    <title>Beerstrot | Vivi l'Esperienza</title>
+    <meta name="description" content="Eventi di Beerstrot" />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
-    <link rel="canonical" href="http://beerstrot.it/blog"/>
-    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css" />
+    <link rel="canonical" href="http://beerstrot.it/eventi"/>
+    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -41,58 +40,78 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
+<!-- inizio eventi -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Notizie e novità</h1>
+            <h1>Eventi</h1>
             <hr/>
         </div>
     </header>
-    <div class="row extra-space-blog">
-        <aside class="medium-4 large-4 medium-push-8 large-push-8 columns">
-<!-- inizio evento in evidenza -->
-            <div class="panel">
-                <h3 class="date">22 ott 2014</h3>
-                <h3>Bourlesque</h3>
-                <img class="extra-space-image-event-blog"src="http://beerstrot.github.io/img/thumbs/burlesque-th.jpg" alt="Burlesque">
-                <p>Gloria e compagne ci delizieranno con uno spettacolo di Burlesque parigino e nel frattempo serviranno i tavoli con qualche pausa per lo spettacolo.</p>
-                <a href="http://beerstrot.github.io/eventi/burlesque.html">Scopri l'evento &rarr;</a>
-            </div>
-<!-- fine evento in evidenza -->
-        </aside>
-<!-- inizio articoli -->
-        <div class="medium-8 large-8 medium-pull-4 large-pull-4 columns" role="content" >
-            <article>
-                <header>
-                    <img src="http://beerstrot.github.io/img/thumbs/tortellone-th.jpg" alt="Tortellone" />
-                    <h1><a href="http://beerstrot.github.io/blog/article-tortellone.html">Tortelloni fatti in casa. Una meraviglia da gustare con Beerstrot IPA</a></h1>
-                    <h6 class="by-line">Written by <a href="http://beerstrot.github.io/team-juliet-maza.html">Juliet Mazà</a> on August 12, 2012.</h6>
-                </header>
-                <p class="first-paragraph">I tortelloni sono fatti con una sfoglia sottile, ricotta, prezzemolo per dare freschezza e spinaci. Purtroppo non avevo nessuna birra fatta da Gio e così mi sono scrofanto i tortelloni senza birra. Molto poco bello, ma.....</p>
-                <a href="http://beerstrot.github.io/blog/article-tortellone.html">Continua a leggere &rarr;</a>
+    <div class="row">
+        <div class="medium-12 large-12 columns">
+            <article class="row">  
+                <div class="medium-3 large-3 columns">
+                    <h3 class="date extra-space-date-aside">19 ott 2014</h3>
+                    <h5>Orario: 17:00-22:00</h5>
+                    <h5><a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Outrgeous Craft Beer</a></h5>  
+                </div>
+                <div class="medium-3 large-3 columns">
+                    <img class="extra-space-image-event" src="img/thumbs/il-violino-e-la-birra-th.jpg" alt="birra e violino">
+                </div>
+                <div class="medium-6 large-6 columns">
+                    <h2>Il violino e la birra</h2>
+                    <p>Il violino di Zanna l'Elefante ci allieterà nella degustazione della <a href="menu-black-ipa-violin.html">Beerstrot Black IPA Violin</a>. Una birra con una cattiveria inaudita.</p>
+                    <a href="eventi-il-violino-e-la-birra.html">Scopri l'evento &rarr;</a>
+                </div>
+                <div class="row">
+                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                        <hr>
+                    </div>
+                </div>
             </article>
-            <hr/>
-            <article>
-                <header>
-                    <img src="http://beerstrot.github.io/img/thumbs/birre-in-love-th.jpg" alt="Birre in love" />
-                    <h1><a href="http://beerstrot.github.io/blog/birra-cibo.html">Amiamo la Birra e il cibo. Ci piace proprio Tanto</a></h1>
-                    <h6 class="by-line">Written by <a href="http://beerstrot.github.io/team/giovanni-attilio.html">Giovanni Attilio</a> on August 12, 2012.</h6>
-                </header>
-                <p class="first-paragraph">Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-                <a href="http://beerstrot.github.io/blog/birra-cibo.html">Continua a leggere &rarr;</a>
+            <article class="row">
+                <div class="medium-3 large-3 columns">
+                    <h3 class="date extra-space-date-aside">22 ott 2014</h3>
+                    <h5>Orario: 19:00-22:00</h5>
+                    <h5><a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Outrgeous Craft Beer</a></h5>  
+                </div>
+                <div class="medium-3 large-3 columns">
+                    <img class="extra-space-image-event" src="img/thumbs/burlesque-th.jpg" alt="Burlesque">
+                </div>
+                <div class="medium-6 large-6 columns">
+                    <h2>Bourlesque</h2>
+                    <p>Gloria e compagne ci delizieranno con uno spettacolo di Burlesque parigino e nel frattempo serviranno i tavoli con qualche pausa per lo spettacolo.</p>
+                    <a href="eventi-burlesque.html">Scopri l'evento &rarr;</a>
+                </div>
+                <div class="row">
+                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                        <hr>
+                    </div>
+                </div>
             </article>
-            <hr/>
-            <article>
-                <header>
-                    <img src="http://beerstrot.github.io/img/thumbs/tapas-th.jpg" alt="Birra e Tapas" />
-                    <h1><a href="http://beerstrot.github.io/blog/birra-e-tapas.html">Amiamo la Birra e unirla a tapas di gran classe</a></h1>
-                    <h6 class="by-line">Written by <a href="http://beerstrot.github.io/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a> on August 12, 2012.</h6>
-                </header>
-                <p class="first-paragraph">Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-                <a href="http://beerstrot.github.io/blog/birra-e-tapas.html">Continua a leggere &rarr;</a>
+            <article class="row">
+                <div class="medium-3 large-3 columns">
+                    <h3 class="date extra-space-date-aside">29 ott 2014</h3>
+                    <h5>Orario: 17:00-22:00</h5> 
+                    <h5><a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Outrgeous Craft Beer</a></h5> 
+                </div>
+                <div class="medium-3 large-3 columns">
+                    <img class="extra-space-image-event" src="img/thumbs/flamenco-e-birra-th.jpg" alt="Concerto Flamenco">
+                </div>
+                <div class="medium-6 large-6 columns">
+                    <h2>Flamenco e birra</h2>
+                    <p>La magica chitarra di Mendez DosCoines accompagnerà la presentazione della nuova birra <a href="menu-Beerstrot-quintupla-ipa.html">Ourageous Quintupla IPA</a> e dei piatti appositamente creati dallo Chef Giovanni.</p>
+                    <a href="eventi-flamenco-e-birra.html">Scopri l'evento &rarr;</a>
+                </div>
+                <div class="row">
+                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                        <hr>
+                    </div>
+                </div>
             </article>
         </div>
-<!-- fine articoli -->
     </div>
+<!-- fine tabbar eventi-->
 <!-- inizio footer -->
     <footer class="panel-prefooter extra-space-footer">
         <div class="row">
