--- a/contatti/index.html
+++ b/contatti/index.html
@@ -74,164 +74,7 @@
                     </div>
                 </section>
             </div>
-            <div class="row show-for-small-only">
-                <section class="medium-12 large-12 columns extra-space">
-                    <h2>Orari apertura</h2>
-                    <h6>
-                        <meta itemprop="openingHours" content="Su,Mo,Tu,We,Th 17:00-24:00"><span> Dom&#8202;&ndash;&#8202;Gio: 17:00&#8202;&ndash;&#8202;24:00</span>
-                    </h6>
-                     <h6>
-                        <meta itemprop="openingHours" content="Fr,Sa, 17:00-01:00"><span> Ven&#8202;&ndash;&#8202;Sab: 17:00&#8202;&ndash;&#8202;01:00</span>
-                    </h6>
-                    <h6><em>Chiusi solo il 1 Gennaio</em></h6>
-                    <a role="button" href="#" class="button extra-space-button" data-reveal-id="prenota-online-small">Prenota un tavolo</a>
-                    <div id="prenota-online-small" class="reveal-modal" data-reveal>
-                        <a class="close-reveal-modal"> &#215; </a> 
-                        <form action="input">
-                            <div class ="row">
-                                <div class="small-5 medium-3 large-3 columns">  
-                                    <label>Persone
-                                        <select>
-                                          <option value="1">1</option>
-                                          <option value="2">2</option>
-                                          <option value="3">3</option>
-                                          <option value="4">4</option>
-                                          <option value="5">5</option>
-                                          <option value="6">6</option>
-                                          <option value="7">7</option>
-                                          <option value="8">8</option>
-                                        </select>
-                                      </label>
-                                </div>
-                            </div>
-                            <div class ="row">
-                                <div class="small-7 medium-6 large-6 columns">  
-                                    <label>Data
-                                        <input type="date" placeholder="" />
-                                      </label>
-                                </div>
-                                <div class="small-5 medium-3 large-3 columns end">  
-                                    <label>Ora
-                                        <input type="time" placeholder="" />
-                                      </label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="small-12 medium-5 large-5 columns">  
-                                    <label>Nome e Cognome
-                                        <input type="text" placeholder="Nome Cognome" />
-                                    </label>
-                                </div>
-                                <div class="small-12  medium-7 large-7 columns end">  
-                                    <label>Email
-                                        <input type="email" placeholder="email" />
-                                      </label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="small-12 medium-12 large-12 columns">
-                                    <a role="button" href="#" class="button small extra-space-button">Prenota e ricevi conferma</a>
-                                </div> 
-                            </div>
-                        </form>  
-                    </div>
-                </section>
-            </div>
-            <div class="row">
-                <section class="medium-12 large-12 columns extra-space">
-                    <h2>Vendi la nostra birra</h2>
-                    <p>Sei un ristoratore, hai un pub, un carretto di fronte allo stadio e vuoi offrire ai ruoi clienti birra artigianale buonissima? Siamo quelli che cerchi!</p>
-<!-- mostra per medium and smaller inizio -->
-                    <div class="hide-for-large-up">
-                        <a role="button" href="#" class="button extra-space-button" data-reveal-id="catalogo-birre">Richiedi il catalogo</a>
-                        <div id="catalogo-birre" class="reveal-modal" data-reveal>
-                            <form action="input">
-                                <div class="row">
-                                    <div class="small-10 medium-6 columns">  
-                                        <label>Nome e Cognome
-                                            <input type="text" placeholder="Nome Cognome" />
-                                        </label>
-                                    </div>
-                                    <div class="small-12  medium-8 columns end">  
-                                        <label>Email
-                                            <input type="email" placeholder="esempio@esempio.it" />
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="row"> 
-                                    <div class="small-6  medium-5 columns">  
-                                        <label>Telefono
-                                            <input type="tel" placeholder="telefono" />
-                                        </label>
-                                    </div>
-                                    <div class="small-6 medium-5 columns end">
-                                        <label>Tipo di locale
-                                            <select>
-                                                <option value="0"></option>
-                                                <option value="1">Birreria</option>
-                                                <option value="2">Chiostro</option>
-                                                <option value="3">Pizzeria</option>
-                                                <option value="4">Ristorante</option>
-                                                <option value="5">Altro</option>
-                                            </select>
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="small-12 medium-12 large-12 columns">
-                                        <a role="button" href="#" class="button extra-space-button">Scarica il catalogo</a>
-                                    </div>
-                                </div>
-                            </form>
-                            <a class="close-reveal-modal">&#215;</a>
-                        </div>
-                    </div>
-<!-- mostra per medium and smaller fine -->
-<!-- mostra per large-up inizio -->           
-                    <div class="show-for-large-up">
-                        <p>Compila tutti i campi del form e scarica il catalogo.</p>
-                        <form action="input">
-                            <div class="row">
-                                    <div class="large-5 columns">  
-                                        <label>Nome e Cognome
-                                            <input type="text" placeholder="Nome Cognome" />
-                                        </label>
-                                    </div>
-                                    <div class="large-5 columns end">  
-                                        <label>Email
-                                            <input type="email" placeholder="esempio@esempio.it" />
-                                        </label>
-                                    </div> 
-                                </div>
-                                <div class="row">
-                                    <div class="large-3 columns">  
-                                        <label>Telefono
-                                            <input type="tel" placeholder="telefono" />
-                                        </label>
-                                    </div>
-                                    <div class="large-4 columns end">  
-                                        <label>Tipo di locale
-                                            <select>
-                                                <option value="0"></option>
-                                                <option value="1">Birreria</option>
-                                                <option value="2">Chiostro</option>
-                                                <option value="3">Pizzeria</option>
-                                                <option value="4">Ristorante</option>
-                                                <option value="5">Altro</option>
-                                            </select>
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="large-12 columns">
-                                    <a role="button" href="#" class="button extra-space-button">Scarica il catalogo delle birre</a>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-<!-- mostra per large-up fine --> 
-                </section>
-            </div>
+                        
             <div class="row">
                 <section class="medium-12 large-12 columns extra-space">
                 <h2>Media Kit</h2>
@@ -323,140 +166,46 @@
 <!-- mostra per large-up fine -->                            
                 </section>
             </div>
-            <div class="row">
-                <section class="medium-12 large-12 columns extra-space">
-                    <h2>Lavora con noi</h2>
-                    <p>Attualmente non abbiamo posizioni aperte. Nel frattempo puoi leggere cosa ci aspettiamo da te. <a href="#">Descrizione delle posizioni &rarr;</a></p>
-                    <p>Vuoi essere aggiornato per email quando si apre una nuova posizione?</p>
-                    <form action="input">
-                        <div class="row collapse">
-                            <div class="small-8 medium-7 large-5 columns">
-                                <input type="email" placeholder="Your email">
-                            </div>
-                            <div class="small-4 medium-3 large-2 columns end">
-                                <a href="#" class="button postfix">Aggiornami</a>
-                            </div>
-                        </div>
-                    </form>
-                </section>
-            </div>
         </div>
-        <aside class="medium-4 large-4 columns hide-for-small">
+        <aside class="medium-4 large-4 columns panel show-for-medium-up">
             <section>
-                <span class="extra-space show-for-small"></span>
-                <h2>Orari apertura</h2>
-                <h6>
-                    <meta itemprop="openingHours" content="Su,Mo,Tu,We,Th 17:00-24:00"><span> Dom&#8202;&ndash;&#8202;Gio: 17:00&#8202;&ndash;&#8202;24:00</span><br>
-                </h6>
-                 <h6>
-                    <meta itemprop="openingHours" content="Fr,Sa, 17:00-01:00"><span> Ven&#8202;&ndash;&#8202;Sab: 17:00&#8202;&ndash;&#8202;01:00</span>
-                </h6>
-                <h6><em>Chiusi solo il 1 Gennaio</em></h6>
+                <span class="extra-space"></span>
+                <h3>Orari apertura</h3>
+                <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
+                <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
+                <meta itemprop="openingHours" content="Sa 18:00-01:00">
+                <meta itemprop="openingHours" content="Su 12:00-22:00">
+                <div class="row">
+                    <div class="large-5 medium-5 small-6 columns">
+                        <p>Mar-Ven</p>
+                    </div>
+                    <div class="large-7 medium-7 small-6 columns">
+                        <p>12&ensp;&ndash;&ensp;14
+                            <br>18&ensp;&ndash;&ensp;00
+                        </p>
+                    </div>
+                    <div class="large-5 medium-5 small-6 columns">
+                        <p>Sabato</p>
+                    </div>
+                    <div class="large-7 medium-7 small-6 columns">
+                        <p>18&ensp;&ndash;&ensp;01</p>
+                    </div>
+                    <div class="large-5 medium-5 small-6 columns">
+                        <p>Domenica</p>
+                    </div>
+                    <div class="large-7 medium-7 small-6 columns">
+                        <p>12&ensp;&ndash;&ensp;22</p>
+                    </div>
+                </div>
+                <p><em>Chiuso il Lunedì</em></p>
             </section>
-<!-- prenota online show for large-up inizio -->
-            <section class="extra-space show-for-large-up">
-                <h2>Prenota Online</h2>
-                <form action="input">
-                    <div class="row">
-                        <div class="small-3 medium-3 large-3 columns">  
-                            <label>Persone
-                                <select>
-                                  <option value="1">1</option>
-                                  <option value="2">2</option>
-                                  <option value="3">3</option>
-                                  <option value="4">4</option>
-                                  <option value="5">5</option>
-                                  <option value="6">6</option>
-                                  <option value="7">7</option>
-                                  <option value="8">8</option>
-                                </select>
-                              </label>
-                        </div>
-                        <div class="small-6 medium-3 large-6 columns">  
-                            <label>Data
-                                <input type="date" placeholder="" />
-                              </label>
-                        </div>
-                        <div class="small-3 medium-3 large-3 columns end">  
-                            <label>Ora
-                                <input type="time" placeholder="" />
-                              </label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="small-9 medium-7 large-12 columns">  
-                            <label>Nome e Cognome
-                                <input type="text" placeholder="Nome Cognome" />
-                            </label>
-                        </div>
-                        <div class="small-7  medium-5 large-12 columns end">  
-                            <label>Email
-                                <input type="email" placeholder="email" />
-                              </label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="small-12 medium-12 large-12 columns">
-                            <a role="button" href="#" class="button">Prenota e ricevi conferma</a>
-                        </div>
-                    </div>
-                </form>
+<!-- prenota online -->
+            <section class="extra-space show-for-medium-up">
+                <h3>Prenota</h3>
+                <p>
+                    <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
+                </p>
             </section>
-<!-- prenota online show for medium inizio -->
-            <section class="show-for-medium-only">
-                <a role="button" href="#" class="button extra-space-button" data-reveal-id="prenota-online-aside">Prenota un tavolo</a>
-                    <div id="prenota-online-aside" class="reveal-modal" data-reveal>
-                        <a class="close-reveal-modal">&#215; </a> 
-                            <form action="input">
-                            <div class ="row">
-                                <div class="small-5 medium-2 large-2 columns">  
-                                    <label>Persone
-                                        <select>
-                                          <option value="1">1</option>
-                                          <option value="2">2</option>
-                                          <option value="3">3</option>
-                                          <option value="4">4</option>
-                                          <option value="5">5</option>
-                                          <option value="6">6</option>
-                                          <option value="7">7</option>
-                                          <option value="8">8</option>
-                                        </select>
-                                      </label>
-                                </div>
-                            </div>
-                            <div class ="row">
-                                <div class="small-7 medium-4 large-3 columns">  
-                                    <label>Data
-                                        <input type="date" placeholder="" />
-                                      </label>
-                                </div>
-                                <div class="small-5 medium-3 large-2 columns end">  
-                                    <label>Ora
-                                        <input type="time" placeholder="" />
-                                      </label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="small-12 medium-5 large-6 columns">  
-                                    <label>Nome e Cognome
-                                        <input type="text" placeholder="Nome Cognome" />
-                                    </label>
-                                </div>
-                                <div class="small-12  medium-7 large-6 columns">  
-                                    <label>Email
-                                        <input type="email" placeholder="email" />
-                                      </label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="small-12 medium-12 large-12 columns end">
-                                    <a role="button" href="#" class="button extra-space-button">Prenota e ricevi conferma</a>
-                                </div> 
-                            </div>
-                        </form>  
-                    </div>
-            </section>
-<!-- prenota online show for medium fine -->
         </aside>
     </div>
 <!-- inizio footer -->
