--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -31,7 +31,7 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
+                <li class="active"><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
                 <li class="divider"></li>
