--- a/eventi/index.html
+++ b/eventi/index.html
@@ -29,7 +29,7 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
+                <li class="active"><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
                 <li class="divider"></li>
