--- a/menu/index.html
+++ b/menu/index.html
@@ -10,7 +10,6 @@
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
     <link rel="canonical" href="http://beerstrot.it/menu" />
     <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css" />
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
@@ -27,7 +26,7 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
+                <li class="active"><a href="http://beerstrot.github.io/menu">Menu</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
                 <li class="divider"></li>
