--- a/eventi/il-violino-e-la-birra.html
+++ b/eventi/il-violino-e-la-birra.html
@@ -13,30 +13,28 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
-    <!-- navbar con hamburger -->
+<!-- navbar con hamburger -->
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="index.html"><img class="img-logo" src="img/svgs/logo-red.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.github.io"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
-                <a href="#">
-                    <span></span>
-                </a>
+                <a href="#"><span></span></a>
             </li>
         </ul>
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
                 <li class="divider"></li>
-                <li><a href="eventi.html">Eventi</a></li>
+                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="chi-siamo.html">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
                 <li class="divider"></li>
-                <li><a href="contatti.html">Contatti</a></li>
+                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
             </ul>
         </section>
     </nav>
