--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <meta name="copyright" content="Beerstrot Copyright (c) 2015" />
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="canonical" href="http://beerstrot.it"/>
-    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <link rel="stylesheet" href="css/app.css" />
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
 <!-- navbar con hamburger -->
@@ -188,7 +189,7 @@
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
+                    <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
@@ -266,8 +267,8 @@
         </div>
     </div>
 <!-- fine navbar footer-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://beerstrot.github.io/js/foundation.min.js"></script>
-    <script src="http://beerstrot.github.io/js/app.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.1/js/foundation.min.js"></script>
+    <script src="http://beerstrot.github.io/js/app.min.js"></script>
 </body>
 </html>
