--- a/menu/index.html
+++ b/menu/index.html
@@ -651,8 +651,8 @@
         </div>
     </div>
 <!-- fine navbar footer-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://beerstrot.github.io/js/foundation.min.js"></script>
-    <script src="http://beerstrot.github.io/js/app.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.1/js/foundation.min.js"></script>
+    <script src="http://beerstrot.github.io/js/app.min.js"></script>
 </body>
 </html>
