--- a/contatti/index.html
+++ b/contatti/index.html
@@ -52,7 +52,7 @@
                 <section class="medium-12 large-12 columns">
                     <h2>Ca' Vecchia Beerstrot</h2>
                     <h6>Telefono: 
-                        <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
+                        <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
                     </h6>
                     <h6>Email: 
                         <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
@@ -203,7 +203,7 @@
             <section class="extra-space show-for-medium-up">
                 <h3>Prenota</h3>
                 <p>
-                    <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
+                    <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
                 </p>
             </section>
         </aside>
@@ -251,7 +251,7 @@
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
+                    <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
