--- a/menu/menu-testuale.html
+++ b/menu/menu-testuale.html
@@ -445,7 +445,7 @@
         <div class="small-12 medium-12 large-12  columns">
             <div class="panel callout">
                 <h2>Prenota un tavolo</h2>
-                <h6 class=" subheader">Obbligo di prenotazione per gruppi superiori a 6 persone. Per 9 persone e più chiamaci al <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>.</h6>
+                <h6 class=" subheader">Obbligo di prenotazione per gruppi superiori a 6 persone. Per 9 persone e più chiamaci al <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>.</h6>
                 <form action="input">
                     <div class ="row">
                         <div class="small-3 medium-2 large-2 columns extra-space">  
