--- a/eventi/burlesque.html
+++ b/eventi/burlesque.html
@@ -229,7 +229,7 @@
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
+                    <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
