--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="canonical" href="http://beerstrot.it"/>
     <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css" />
-    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <link href="cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
@@ -68,7 +68,7 @@
             <div class="medium-4 large-4 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h3>Prenota</h3>
                 <h5>
-                    <a href="tel:+393385071940"><span itemprop="telephone">+39 338 507 1940</span></a>
+                    <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
                 </h5>
             </div>
             <div class="medium-4 large-4 columns" itemscope itemtype="http://schema.org/Restaurant">
