--- a/contatti/index.html
+++ b/contatti/index.html
@@ -52,7 +52,7 @@
                 <section class="medium-12 large-12 columns">
                     <h2>Ca' Vecchia Beerstrot</h2>
                     <h6>Telefono: 
-                        <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
+                        <a href="tel:+393385071940"><span itemprop="telephone">338 5071940</span></a>
                     </h6>
                     <h6>Email: 
                         <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
@@ -170,7 +170,7 @@
         <aside class="medium-4 large-4 columns panel show-for-medium-up">
             <section>
                 <span class="extra-space"></span>
-                <h3>Orari apertura</h3>
+                <h4>Orari apertura</h4>
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
                 <meta itemprop="openingHours" content="Sa 18:00-01:00">
@@ -201,9 +201,9 @@
             </section>
 <!-- prenota online -->
             <section class="extra-space show-for-medium-up">
-                <h3>Prenota</h3>
+                <h4>Prenota</h4>
                 <p>
-                    <a href="tel:+393385071940"><i class="fi-telephone"></i><span itemprop="telephone">338 5071940</span></a>
+                    <a href="tel:+393385071940"><span itemprop="telephone">338 5071940</span></a>
                 </p>
             </section>
         </aside>
