--- a/contatti/index.html
+++ b/contatti/index.html
@@ -52,7 +52,7 @@
                 <section class="medium-12 large-12 columns">
                     <h2>Ca' Vecchia Beerstrot</h2>
                     <h6>Telefono: 
-                        <a href="tel:+393385071940"><span itemprop="telephone">338 5071940</span></a>
+                        <a href="tel:+393385071940"><span itemprop="telephone">+39 338 5071940</span></a>
                     </h6>
                     <h6>Email: 
                         <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
@@ -167,44 +167,44 @@
                 </section>
             </div>
         </div>
-        <aside class="medium-4 large-4 columns panel show-for-medium-up">
+        <aside class="medium-4 large-4 columns panel-footer show-for-medium-up">
             <section>
                 <span class="extra-space"></span>
-                <h4>Orari apertura</h4>
+                <h4 class="subheader">Orari apertura</h4>
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
                 <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
                 <meta itemprop="openingHours" content="Sa 18:00-01:00">
                 <meta itemprop="openingHours" content="Su 12:00-22:00">
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Mar-Ven</p>
+                        <h6>Mar-Ven</h6>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
-                        <p>12&ensp;&ndash;&ensp;14
+                        <h6>12&ensp;&ndash;&ensp;14
                             <br>18&ensp;&ndash;&ensp;00
-                        </p>
+                        </h6>
                     </div>
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Sabato</p>
+                        <h6>Sabato</h6>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
-                        <p>18&ensp;&ndash;&ensp;01</p>
+                        <h6>18&ensp;&ndash;&ensp;01</h6>
                     </div>
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Domenica</p>
+                        <h6>Domenica</h6>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
-                        <p>12&ensp;&ndash;&ensp;22</p>
+                        <h6>12&ensp;&ndash;&ensp;22</h6>
                     </div>
                 </div>
                 <p><em>Chiuso il Lunedì</em></p>
             </section>
 <!-- prenota online -->
             <section class="extra-space show-for-medium-up">
-                <h4>Prenota</h4>
-                <p>
-                    <a href="tel:+393385071940"><span itemprop="telephone">338 5071940</span></a>
-                </p>
+                <h4 class="subheader">Prenota</h4>
+                <h6>
+                    <a href="tel:+393385071940"><span itemprop="telephone">+39 338 5071940</span></a>
+                </h6>
             </section>
         </aside>
     </div>
