fixing chi siamo

--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -90,170 +90,39 @@
                             <article class="row">
                                 <div class="medium-12 large-12 columns">
                                     <h2>Team</h2>
-<!-- inizio tabbar switch-->
-                                <ul class="tabs extra-space-from-tabs" data-tab role="tablist" id="team-tab">
-                                    <li class="tab-title active" role="presentational" ><a href="#fondatori" role="tab" tabindex="0" aria-selected="true" controls="fondatori">Fondatori</a></li>
-                                    <li class="tab-title" role="presentational" ><a href="#staff" role="tab" tabindex="0"aria-selected="false" controls="staff">Staff</a></li>
-                                    <li class="tab-title" role="presentational"><a href="#blogger" role="tab" tabindex="0" aria-selected="false" controls="blogger">Bloggers</a></li>
-                                </ul>
-<!-- fine tabbar switch-->
-                                <div class="tabs-content extra-space-from-tabs">
-<!-- inizio fondatori-->
-                                    <section role="tabpanel" aria-hidden="false" class="content active" id="fondatori">
-                                        <div class="row">
-                                            <div class="large-12 medium-12 small-12 columns">
-                                                <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
-                                                    <li>
-                                                        <a href="team-andrea-tagliazucchi.html">
-                                                            <img src="img/thumbs/andrea-th.jpg" alt="Andrea">
-                                                            <div class="panel">
-                                                                <h5>Andrea Tagliazucchi</h5>
-                                                                <h6 class="subheader">CFO | Beer Server</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="team-giovanni-attilio.html">
-                                                            <img src="img/thumbs/giovanni-th.jpg" alt="giovanni">
-                                                            <div class="panel">
-                                                                <h5>Giovanni Attilio</h5>
-                                                                <h6 class="subheader">CEO | Master Brewer</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                </ul>
-                                            </div>
+                                    <div class="row">
+                                        <div class="large-12 medium-12 small-12 columns">
+                                            <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
+                                                <li>
+                                                    <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">
+                                                        <img src="http://beerstrot.it/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Mazza">
+                                                        <div class="panel">
+                                                            <h5>Giulia Mazza</h5>
+                                                            <h6 class="subheader">CEO | Master Brewer</h6>
+                                                        </div>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">
+                                                        <img src="http://beerstrot.it/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
+                                                        <div class="panel">
+                                                            <h5>Andrea Tagliazucchi</h5>
+                                                            <h6 class="subheader">CFO | Beer Server</h6>
+                                                        </div>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="http://beerstrot.it/chi-siamo/team/giovanni-attilio.html">
+                                                        <img src="http://beerstrot.it/img/thumbs/giovanni-attilio-th.jpg" alt="Giovanni Attilio">
+                                                        <div class="panel">
+                                                            <h5>Giovanni Attilio</h5>
+                                                            <h6 class="subheader">CEO | Master Brewer</h6>
+                                                        </div>
+                                                    </a>
+                                                </li>
+                                            </ul>
                                         </div>
-                                    </section>
-<!-- fine fondatori-->
-<!-- inizio staff-->
-                                    <section role="tabpanel" aria-hidden="true" class="content" id="staff">
-                                        <div class="row">
-                                            <div class="large-12 medium-12 small-12 columns">
-                                                <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
-                                                    <li>
-                                                        <a href="http://beerstrot.it/team/giulia-mazza.html">
-                                                            <img src="http://beerstrot.it/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Mazza">
-                                                            <div class="panel">
-                                                                <h5>Giulia</h5>
-                                                                <h6 class="subheader">Chef</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="team-giovanni-attilio.html">
-                                                            <img src="http://beerstrot.it/img/thumbs/giovanni-th.jpg" alt="Giovanni Attilio">
-                                                            <div class="panel">
-                                                                <h5>Giovanni Attilio</h5>
-                                                                <h6 class="subheader">Subchef</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="team-andrea-tagliazucchi.html">
-                                                            <img src="img/thumbs/andrea-th.jpg" alt="Andrea">
-                                                            <div class="panel">
-                                                                <h5>Andrea Tagliazucchi</h5>
-                                                                <h6 class="subheader">Line cooker</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="team-juliet-maza.html">
-                                                            <img src="img/thumbs/juliet-th.jpg" alt="Juliet Mazà">
-                                                            <div class="panel">
-                                                                <h5>Juliet</h5>
-                                                                <h6 class="subheader">Server</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="team-juliet-maza.html">
-                                                            <img src="img/thumbs/juliet-th.jpg" alt="Juliet Mazà">
-                                                            <div class="panel">
-                                                                <h5>Juliet Maza</h5>
-                                                                <h6 class="subheader">Barista</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </section>
-<!-- fine staff -->
-<!-- inizio blogger-->
-                                    <section role="tabpanel" aria-hidden="true" class="content" id="blogger">
-                                        <div class="row">
-                                            <div class="large-12 medium-12 small-12 columns">
-                                                <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
-                                                    <li>
-                                                        <a href="juliet-maza.html">
-                                                            <img src="img/thumbs/juliet-th.jpg" alt="Juliet Mazà">
-                                                            <div class="panel">
-                                                                <h5>Juliet</h5>
-                                                                <h6 class="subheader">Blogger</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="giovanni-attilio.html">
-                                                            <img src="img/thumbs/giovanni-th.jpg" alt="Giovanni Attilio">
-                                                            <div class="panel">
-                                                                <h5>Giovanni Attilio</h5>
-                                                                <h6 class="subheader">Blogger</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="andrea-tagliazucchi.html">
-                                                            <img src="img/thumbs/andrea-th.jpg" alt="Andrea">
-                                                            <div class="panel">
-                                                                <h5>Andrea </h5>
-                                                                <h6 class="subheader">Photo</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="juliet-maza.html">
-                                                            <img src="img/thumbs/juliet-th.jpg" alt="Juliet Mazà">
-                                                            <div class="panel">
-                                                                <h5>Juliet</h5>
-                                                                <h6 class="subheader">Blogger</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="juliet-maza.html">
-                                                            <img src="img/thumbs/juliet-th.jpg" alt="Juliet Mazà">
-                                                            <div class="panel">
-                                                                <h5>Juliet</h5>
-                                                                <h6 class="subheader">Blogger</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="giovanni-attilio.html">
-                                                            <img src="img/thumbs/giovanni-th.jpg" alt="Giovanni Attilio">
-                                                            <div class="panel">
-                                                                <h5>Giovanni Attilio</h5>
-                                                                <h6 class="subheader">Blogger</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="andrea-tagliazucchi.html">
-                                                            <img src="img/thumbs/andrea-th.jpg" alt="Andrea">
-                                                            <div class="panel">
-                                                                <h5>Andrea </h5>
-                                                                <h6 class="subheader">Photo</h6>
-                                                            </div>
-                                                        </a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </section>
-<!-- fine blogger -->
+                                    </div>
                                 </div>
                             </article>
                         </div>
